<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30sp"
            tools:context=".ItemInputActivity" >


        <Button
            android:id="@+id/itemListActivity"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/inputItem"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/bg_form"
            android:ems="10"
            android:hint="@string/naziv_proizvoda"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemListActivity"
            />

        <EditText
            android:id="@+id/inputNumber"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/bg_form"
            android:ems="10"
            android:hint="@string/kolicina_proizvoda"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputItem" />

        <CheckBox
            android:id="@+id/konzumCheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22sp"
            android:layout_marginEnd="22sp"
            android:minHeight="48dp"
            android:layout_marginTop="30dp"
            android:text="@string/konzum"
            app:layout_constraintBottom_toTopOf="@+id/lidlCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputNumber" />

        <CheckBox
                android:id="@+id/lidlCheck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22sp"
                android:layout_marginEnd="22sp"
                android:text="@string/lidl"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@id/konzumCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/kauflandCheck"

        />

        <CheckBox
                android:id="@+id/kauflandCheck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22sp"
                android:layout_marginEnd="22sp"
                android:text="@string/kaufland"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@id/lidlCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/sparCheck"

        />

        <CheckBox
                android:id="@+id/sparCheck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22sp"
                android:layout_marginEnd="22sp"
                android:text="@string/spar"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@id/kauflandCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputButton"

        />

        <Button
            android:id="@+id/inputButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35sp"
            android:text="@string/spremi"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sparCheck" />

        <Button
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Karta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputButton"
            android:layout_marginTop="25sp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>